--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,12 @@
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
 }
+
+@media screen and (max-width: 400px) {
+  .browse-btn {
+    width: fit-content;
+  }
+}
 .remove-btn {
     border: 0px;
     background: none;
@@ -112,17 +118,51 @@ ul li {
 }
 
 ul li:hover {
-  cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .cancel {
-  position: relative;
-  padding: 8px;
-  cursor: pointer;
+    position: relative;
+    padding: 8px;
+    cursor: pointer;
 }
 
 .cancel:hover {
-  background-color: rgb(6, 140, 218, 0.1);
-  border-radius: 4px;
+    background-color: rgb(6, 140, 218, 0.1);
+    border-radius: 4px;
+}
+
+.email-list-header {
+    display: flex;
+    align-items: center;
+    padding-right: 20px;
+}
+
+.message {
+  text-align: center;
+  font-size: 20px;
+  padding: 15px;
+  margin: 15px 0;
+}
+
+.error {
+  color: red;
+  box-shadow: rgb(255 0 0 / 16%) 0px 1px 4px, rgb(255 0 0) 0px 0px 0px 3px;
+}
+
+.success {
+  color: green;
+  box-shadow: rgb(0 255 0 / 16%) 0px 1px 4px, rgb(0 255 0) 0px 0px 0px 3px;
+}
+
+.loader-container {
+  position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    z-index: 9999;
+    color: white;
 }
